--- a/index.html
+++ b/index.html
@@ -283,8 +283,8 @@
                 <div class="col-md-3">
                     <h5>Contato</h5>
                     <ul class="list-unstyled">
-                        <li><i class="fas fa-envelope me-2"></i> contato@circuitosedu.com.br</li>
-                        <li><i class="fas fa-phone me-2"></i> (00) 1234-5678</li>
+                        <li><i class="fas fa-envelope me-2"></i>2025100716@ifam.edu.br</li>
+                        <li><i class="fas fa-phone me-2"></i> (92) 99627-5699</li>
                     </ul>
                 </div>
             </div>
