--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
                 <div class="col-md-3">
                     <h5>Contato</h5>
                     <p>
-                        <a href="mailto:circuitosedu@example.com" class="text-white">circuitosedu@example.com</a>
+                        <a href="mailto:circuitosedu@example.com" class="text-white">2025100716@ifam.edu.br</a>
                     </p>
                 </div>
             </div>
