--- a/index.html
+++ b/index.html
@@ -333,4 +333,11 @@
     </div>
 </body>
 </html>
+<!-- Chatbot do MSEP -->
+<div id="chat-box" style="height: 300px; overflow-y: auto; border: 1px solid #ccc; padding: 10px; margin-bottom: 10px;"></div>
+<form id="chat-form">
+  <input type="text" id="user-input" placeholder="Digite sua dúvida sobre o MSEP..." required style="width: 80%;" />
+  <button type="submit">Enviar</button>
+</form>
+<script src="chatbot.js"></script> <!-- ou script.js se for o mesmo -->
 
